--- a/tools/ghidra/tool.yaml
+++ b/tools/ghidra/tool.yaml
@@ -1,6 +1,6 @@
 name: ghidra
 version: "12.0"
-description: "Ghidra reverse engineering framework for binary decompilation, disassembly, function analysis, and cross-reference mapping. Converts machine code to readable C pseudocode."
+description: "Ghidra reverse engineering framework for binary decompilation, disassembly, function analysis, and cross-reference mapping. Converts machine code to readable C pseudocode. Powered by bethington/ghidra-mcp (headless mode, 128 tools available via bridge)."
 image: "ghcr.io/silicon-works/mcp-tools-ghidra:latest"
 image_size_mb: 1500
 
@@ -49,88 +49,59 @@ resources:
 
 methods:
   load_binary:
-    description: "Load a binary into Ghidra and run auto-analysis. Call this first before using other analysis methods — analysis can take 5-30s depending on binary size."
+    description: "Load a binary file from the filesystem into Ghidra and run auto-analysis. Call this first before using other analysis methods — analysis can take 5-30s depending on binary size."
     when_to_use: "First step when you have a binary to analyze. Load it once, then use decompile_function, list_functions, etc. repeatedly without waiting again."
     params:
-      binary_path:
+      file:
         type: string
         required: true
-        description: "Path to the binary file to load and analyze (use /session/ path for files in session directory)"
+        description: "Absolute path to the binary file (e.g., '/data/vuln', '/session/binary')"
     returns:
-      binary_path:
+      program:
         type: string
-        description: "Path to the loaded binary"
-      analyzed:
-        type: boolean
-        description: "Whether auto-analysis completed successfully"
+        description: "Program name in Ghidra project"
 
   decompile_function:
-    description: "Decompile a function to C pseudocode by name. Returns readable C code from machine code, making it easy to identify vulnerabilities like buffer overflows, format strings, and logic flaws."
+    description: "Decompile a function to C pseudocode by name or address. Returns readable C code from machine code, making it easy to identify vulnerabilities like buffer overflows, format strings, and logic flaws."
     when_to_use: "After identifying a potentially vulnerable function (from strings, symbols, or function list) to understand its logic in C rather than reading raw assembly."
     params:
-      binary_path:
-        type: string
-        required: true
-        description: "Path to the binary file to analyze (use /session/ path for files in session directory)"
       name:
         type: string
-        required: true
-        description: "Function name to decompile (e.g., 'main', 'vuln', 'check_password')"
-    returns:
-      decompiled:
-        type: string
-        description: "C pseudocode of the function"
-
-  decompile_function_by_address:
-    description: "Decompile a function at a specific memory address to C pseudocode. Use when you have an address but not a function name."
-    when_to_use: "When you have a function address from xrefs, crash dumps, or disassembly but don't know the function name."
-    params:
-      binary_path:
-        type: string
-        required: true
-        description: "Path to the binary file"
+        description: "Function name to decompile (e.g., 'main', 'vuln'). Either name or address required."
       address:
         type: string
-        required: true
-        description: "Function address in hex (e.g., '0x401234')"
+        description: "Function address in hex (e.g., '0x401234'). Alternative to name."
+      program:
+        type: string
+        description: "Program name for multi-binary sessions"
     returns:
       decompiled:
         type: string
         description: "C pseudocode of the function"
 
   list_functions:
-    description: "List all functions found in the binary with their addresses and sizes."
+    description: "List all functions found in the binary with their addresses. Note: returns all functions regardless of offset/limit in headless mode."
     when_to_use: "First step when analyzing an unknown binary — get an overview of all functions to identify interesting targets (main, custom functions, vulnerable-looking names like 'check_auth', 'handle_input')."
     params:
-      binary_path:
+      program:
         type: string
-        required: true
-        description: "Path to the binary file"
-      offset:
-        type: integer
-        default: 0
-        description: "Pagination offset for large binaries"
-      limit:
-        type: integer
-        default: 100
-        description: "Maximum number of functions to return"
+        description: "Program name for multi-binary sessions"
     returns:
       functions:
         type: array
-        description: "List of functions with name, address, size"
+        description: "List of functions with name and address"
 
   search_functions_by_name:
-    description: "Search for functions whose names contain a query string. Useful for finding functions related to specific functionality."
+    description: "Search for functions whose names contain a query string. Case-insensitive substring match."
     when_to_use: "When looking for functions related to specific behavior (e.g., search 'auth' to find authentication functions, 'buf' to find buffer-related functions)."
     params:
-      binary_path:
-        type: string
-        required: true
-        description: "Path to the binary file"
       query:
         type: string
         required: true
         description: "Substring to search for in function names (e.g., 'auth', 'check', 'buf')"
+      program:
+        type: string
+        description: "Program name for multi-binary sessions"
     returns:
       functions:
         type: array
@@ -140,47 +111,54 @@ methods:
     description: "Get cross-references TO an address — shows what code calls or references this location."
     when_to_use: "To understand how a potentially vulnerable function is reached (call chain), or to find all callers of a dangerous function like system(), execve(), strcpy()."
     params:
-      binary_path:
-        type: string
-        required: true
-        description: "Path to the binary file"
       address:
         type: string
         required: true
-        description: "Target address in hex (e.g., '0x401234') or function name"
+        description: "Target address in hex (e.g., '0x401234')"
+      offset:
+        type: integer
+        default: 0
+        description: "Pagination offset"
+      limit:
+        type: integer
+        default: 100
+        description: "Maximum results to return"
+      program:
+        type: string
+        description: "Program name for multi-binary sessions"
     returns:
       xrefs:
         type: array
         description: "List of addresses/functions that reference this location"
 
-  get_xrefs_from:
-    description: "Get cross-references FROM an address — shows what this function/location calls or references."
-    when_to_use: "To see what dangerous functions a target function calls (system, execve, strcpy, gets, printf with user input)."
+  get_function_xrefs:
+    description: "Get all cross-references to a function by name — easier than get_xrefs_to when you have a name, not an address."
+    when_to_use: "When you know a function name and want to find all callers without looking up its address first."
     params:
-      binary_path:
+      name:
         type: string
         required: true
-        description: "Path to the binary file"
-      address:
+        description: "Function name to find references for"
+      offset:
+        type: integer
+        default: 0
+        description: "Pagination offset"
+      limit:
+        type: integer
+        default: 100
+        description: "Maximum results to return"
+      program:
         type: string
-        required: true
-        description: "Source address in hex (e.g., '0x401234') or function name"
+        description: "Program name for multi-binary sessions"
     returns:
       xrefs:
         type: array
-        description: "List of addresses/functions referenced by this location"
+        description: "List of references to the function"
 
   list_strings:
-    description: "Extract defined strings from the binary with their addresses. Finds URLs, passwords, error messages, format strings, /bin/sh, and other interesting constants."
+    description: "List all defined strings in the binary with their addresses. Finds URLs, passwords, error messages, format strings, /bin/sh, and other interesting constants."
     when_to_use: "To find interesting strings (URLs, passwords, error messages, format strings, /bin/sh) and trace them back to the functions that use them via xrefs."
     params:
-      binary_path:
-        type: string
-        required: true
-        description: "Path to the binary file"
-      filter:
-        type: string
-        description: "Optional substring filter to narrow results (e.g., 'password', '/bin', 'http')"
       offset:
         type: integer
         default: 0
@@ -189,6 +167,9 @@ methods:
         type: integer
         default: 100
         description: "Maximum strings to return"
+      program:
+        type: string
+        description: "Program name for multi-binary sessions"
     returns:
       strings:
         type: array
@@ -198,10 +179,17 @@ methods:
     description: "List imported functions (from libc, etc.) with their addresses. Shows what external functions the binary uses."
     when_to_use: "To identify dangerous imports (gets, strcpy, printf, system) that indicate vulnerability types, and to get addresses needed for ROP chains and GOT overwrite attacks."
     params:
-      binary_path:
+      offset:
+        type: integer
+        default: 0
+        description: "Pagination offset"
+      limit:
+        type: integer
+        default: 100
+        description: "Maximum results"
+      program:
         type: string
-        required: true
-        description: "Path to the binary file"
+        description: "Program name for multi-binary sessions"
     returns:
       imports:
         type: array
@@ -211,41 +199,109 @@ methods:
     description: "List exported symbols from the binary."
     when_to_use: "To see what symbols the binary exports — useful for shared libraries or to find entry points."
     params:
-      binary_path:
+      offset:
+        type: integer
+        default: 0
+        description: "Pagination offset"
+      limit:
+        type: integer
+        default: 100
+        description: "Maximum results"
+      program:
         type: string
-        required: true
-        description: "Path to the binary file"
+        description: "Program name for multi-binary sessions"
     returns:
       exports:
         type: array
         description: "Exported symbols with names and addresses"
 
   list_segments:
-    description: "List memory segments (sections) of the binary with permissions."
+    description: "List memory segments (sections) of the binary with address ranges."
     when_to_use: "To understand memory layout — which segments are executable (for shellcode), writable (for overwrites), or both (W+X = exploitable)."
     params:
-      binary_path:
+      program:
         type: string
-        required: true
-        description: "Path to the binary file"
+        description: "Program name for multi-binary sessions"
     returns:
       segments:
         type: array
-        description: "Segments with name, address, size, permissions"
+        description: "Segments with name, address range"
 
-  disassemble_function:
-    description: "Get the assembly code for a function. Returns raw assembly instructions with addresses."
-    when_to_use: "When you need exact assembly instructions (e.g., to verify ROP gadgets, understand calling convention, or check instruction alignment). Prefer decompile_function for general understanding."
+  get_entry_points:
+    description: "Get all entry point addresses for the binary."
+    when_to_use: "To find the binary's entry point(s) — useful for stripped binaries where main() isn't easily identifiable."
+    params: {}
+    returns:
+      entry_points:
+        type: array
+        description: "Entry point names and addresses"
+
+  rename_function:
+    description: "Rename a function to give it a more descriptive name."
+    when_to_use: "After identifying what a function does, rename it for clarity (e.g., rename 'FUN_00401234' to 'vulnerable_strcpy_wrapper')."
     params:
-      binary_path:
+      old_name:
         type: string
         required: true
-        description: "Path to the binary file"
+        description: "Current function name"
+      new_name:
+        type: string
+        required: true
+        description: "New function name"
+    returns:
+      result:
+        type: string
+        description: "Confirmation of rename"
+
+  get_metadata:
+    description: "Get metadata about the currently loaded program — name, path, architecture, compiler, image base address."
+    when_to_use: "After loading a binary, to determine its architecture (x86, ARM, MIPS), compiler, and base address for calculating offsets."
+    params: {}
+    returns:
+      metadata:
+        type: object
+        description: "Program name, path, language, compiler, image_base, address_size"
+
+  get_function_by_address:
+    description: "Get function information by its address. Returns name, signature, and calling convention."
+    when_to_use: "When you have a hex address (from xrefs, crash logs, or exploit output) and need to find which function it belongs to."
+    params:
       address:
         type: string
         required: true
-        description: "Function address in hex"
+        description: "Address in hex (e.g., '0x401234')"
     returns:
-      assembly:
+      function:
+        type: object
+        description: "Function name, address, signature, calling convention"
+
+  get_function_variables:
+    description: "List all variables in a function including parameters and locals."
+    when_to_use: "To understand a function's stack layout — identify buffer sizes, variable types, and stack offsets needed for buffer overflow exploits."
+    params:
+      function_name:
         type: string
-        description: "Assembly code listing"
+        required: true
+        description: "Function name to inspect"
+    returns:
+      variables:
+        type: object
+        description: "Function parameters and local variables with types"
+
+  check_connection:
+    description: "Verify the Ghidra server is running and responsive."
+    when_to_use: "To check if Ghidra is ready before starting analysis, or to diagnose connection issues."
+    params: {}
+    returns:
+      status:
+        type: string
+        description: "Connection status and server version"
+
+  list_open_programs:
+    description: "List all currently open programs in Ghidra."
+    when_to_use: "When working with multiple binaries to see which programs are loaded and which is currently active."
+    params: {}
+    returns:
+      programs:
+        type: array
+        description: "List of open program names with current indicator"
